# aura

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  monitor.rs  playback.rs  wallpaper.rs
crates/core/tests/: app_config_env_test.rs  config_test.rs  core_lifecycle.rs  detect_media_kind_test.rs  error_test.rs  monitor_assignment_serde_test.rs  playback_test.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  codec.rs  error.rs  lib.rs  protocol.rs  server.rs
crates/ipc/tests/: codec_test.rs  ipc_roundtrip.rs  wallpaper_entry_test.rs
crates/media/: Cargo.toml
crates/media/src/: decoder.rs  error.rs  frame_queue.rs  gif_decoder.rs  image_decoder.rs  lib.rs  video_decoder.rs
crates/media/tests/: decoded_frame_test.rs  decoder_test.rs  gif_composite_test.rs  image_error_test.rs  media_detection.rs  video_detection_test.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: error.rs  event_pump.rs  h264_parser.rs  host_window.rs  lib.rs  mf_video.rs  monitor_enum.rs  power.rs  singleton.rs  workerw.rs
crates/platform-windows/src/workerw/: attachment.rs  discovery.rs  manager.rs  mod.rs
crates/platform-windows/tests/: error_test.rs  h264_parser_test.rs  power_test.rs  singleton_test.rs
crates/renderer-vulkan/: Cargo.toml
crates/renderer-vulkan/src/: context.rs  error.rs  frame.rs  lib.rs  monitor_renderer.rs  pipeline.rs  shader.rs  staging.rs  surface.rs  swapchain.rs  texture.rs  transform.rs  upload.rs  video_decode_pipeline.rs  video_session.rs
crates/renderer-vulkan/src/monitor_renderer/: frame_pass.rs  mod.rs  resources.rs
crates/renderer-vulkan/tests/: shader_test.rs  transform_test.rs
crates/storage/: Cargo.toml
crates/storage/src/: atomic.rs  config_store.rs  error.rs  lib.rs  library_store.rs  migration.rs  scanner.rs  thumbnail.rs  watcher.rs
crates/storage/tests/: chrono_test.rs  corrupt_test.rs  scanner_test.rs  store_test.rs
crates/wallpaper-ui/: Cargo.toml
crates/wallpaper-ui/src/: app.rs  ipc_client.rs  library_panel.rs  main.rs  monitor_panel.rs  settings_panel.rs  status_bar.rs
crates/wallpaper-ui/src/library_panel/: card.rs  mod.rs
crates/wallpaperd/: Cargo.toml
crates/wallpaperd/src/: assignment.rs  daemon.rs  decode_worker.rs  lib.rs  main.rs  orchestrator.rs  perf.rs  recovery.rs  render_coordinator.rs  render_thread.rs
crates/wallpaperd/src/orchestrator/: mod.rs
crates/wallpaperd/src/orchestrator/handlers/: assignment.rs  library.rs  mod.rs  status.rs
crates/wallpaperd/src/render_thread/: loop_runner.rs  mod.rs  placement.rs
crates/wallpaperd/tests/: assignment_test.rs  coordinator_test.rs  daemon_error_test.rs  decode_worker_test.rs  ipc_integration.rs  monitor_context_test.rs  perf_test.rs
resources/shaders/: quad.frag  quad.frag.spv  quad.vert  quad.vert.spv
src/: lib.rs  main.rs
src/app/: composition_root.rs  mod.rs  ui_bridge.rs
src/config/: migrations.rs  mod.rs  model.rs
src/domain/: events.rs  fit_mode.rs  mod.rs  monitor.rs  traits.rs  wallpaper.rs
src/media/image/: mod.rs  webp_fallback.rs  wic_decoder.rs
src/media/video/: mod.rs
src/monitor/: enumeration.rs  manager.rs  mod.rs
src/platform/windows/: file_dialog.rs  messages.rs  mod.rs  tray_icon.rs  window_class.rs  workerw.rs
src/renderer/: d3d11_device.rs  mod.rs  swapchain.rs  texture.rs  texture_tests.rs
src/services/: mod.rs  set_wallpaper_service.rs
src/storage/: json_store.rs
src/ui/: egui_backend.rs  main_window.rs  mod.rs  tray_dispatch.rs
src/ui/views/: library_grid.rs  mod.rs  monitor_panel.rs
src/utils/: error.rs  hresult.rs  logging.rs  mod.rs
src/wallpaper/: image_wallpaper.rs  mod.rs
tools/workerw-proof/: Cargo.toml
tools/workerw-proof/src/: main.rs  win.rs
