[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[dependencies]
# Win32 API access
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Imaging",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_StationsAndDesktops",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_UI_Shell_Common",
] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
crossbeam-channel = "0.5"

# Image processing fallback
image = { version = "0.25", default-features = false, features = ["webp"] }

# GUI — egui version MUST match the version egui-directx11 compiles against internally.
# egui-directx11 v0.12.1 transitively requires egui v0.33.3; using a higher version
# produces a FullOutput type mismatch because Cargo pulls in two different egui crates.
# Do NOT bump egui without first checking `cargo tree -p egui-directx11`.
egui = "0.33.3"
egui-directx11 = "0.12.1"
