[workspace]
members = [
    "crates/core",
    "crates/ipc",
    "crates/storage",
    "crates/media",
    "crates/platform-windows",
    "crates/renderer-vulkan",
    "crates/wallpaperd",
    "crates/wallpaper-ui",
    "tools/workerw-proof",
]
resolver = "2"

[workspace.package]
version       = "0.1.0"
edition       = "2024"
license       = "MIT"
authors       = ["Aura Contributors"]
rust-version  = "1.97.1"

# ---------------------------------------------------------------------------
# Shared dependency versions — all crates inherit from here.
# Crates add feature flags on top as needed.
# ---------------------------------------------------------------------------
[workspace.dependencies]

# Serialisation
serde        = { version = "1.0.229", features = ["derive"] }
serde_json   = "1.0"
toml         = "1.1"

# Errors & logging
thiserror          = "2.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Async runtime (IPC, UI reconnect)
tokio = { version = "1", features = ["full"] }

# Identifiers
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Bounded channels (frame pipeline, event queues)
crossbeam-channel = "0.5"

# Windows APIs — only platform-windows, renderer-vulkan, workerw-proof depend on this
windows = "0.62"

# Vulkan — only renderer-vulkan depends on this
ash            = { version = "0.38", default-features = false, features = ["loaded"] }
gpu-allocator  = { version = "0.28", default-features = false, features = ["vulkan", "std"] }

# Media decoding — only media crate depends on this
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp", "tiff"] }
gif   = "0.14"

# UI — only wallpaper-ui depends on this
eframe      = { version = "0.35", default-features = false, features = ["default_fonts", "wgpu"] }
egui        = "0.35"
egui_extras = { version = "0.35", features = ["image", "file"] }

# Internal workspace crates
aura-core             = { path = "crates/core" }
aura-ipc              = { path = "crates/ipc" }
aura-storage          = { path = "crates/storage" }
aura-media            = { path = "crates/media" }
aura-platform-windows = { path = "crates/platform-windows" }
aura-renderer-vulkan  = { path = "crates/renderer-vulkan" }

# ---------------------------------------------------------------------------
# Build profiles
# ---------------------------------------------------------------------------
[profile.dev]
opt-level = 1          # Faster debug builds with minimal optimisation

[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 1
panic           = "abort"
strip           = "symbols"
