[package]
name        = "aura-core"
description = "Platform-independent domain model for the Aura wallpaper platform"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
serde      = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
