[package]
name        = "aura-media"
description = "Media decoding abstractions — image, GIF, and video decoder traits"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aura-core         = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
image             = { workspace = true }
gif               = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
