[package]
name        = "aura-media"
description = "Media decoding abstractions — image, GIF, and video decoder traits"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aura-core         = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }
image             = { workspace = true }
gif               = { workspace = true }
