[package]
name        = "aura-storage"
description = "Configuration and wallpaper library metadata persistence"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
aura-core  = { workspace = true }
aura-media = { workspace = true }
image      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
notify-debouncer-full = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
aura-platform-windows = { workspace = true }

[dev-dependencies]
tempfile = "3"
