[package]
name        = "wallpaper-ui"
description = "Aura control panel UI — communicates with wallpaperd via IPC only"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[[bin]]
name = "wallpaper-ui"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# DEPENDENCY BOUNDARY ENFORCEMENT
#
# wallpaper-ui MUST NOT depend on:
#   - aura-media            (media decoding internals)
#   - aura-platform-windows (Win32 desktop integration)
#   - aura-renderer-vulkan  (GPU rendering)
#
# Verify with: cargo tree -p wallpaper-ui
# ---------------------------------------------------------------------------
[dependencies]
aura-core  = { workspace = true }
aura-ipc   = { workspace = true }

eframe  = { workspace = true }
egui    = { workspace = true }
rfd     = "0.15"

serde             = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
tokio             = { workspace = true }
