[package]
name        = "workerw-proof"
description = "Phase 0: WorkerW desktop integration proof — validates attach/recovery before Vulkan"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
rust-version.workspace = true

[[bin]]
name = "workerw-proof"
path = "src/main.rs"

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
